--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <a href="geog370_project4/gcpoints.txt">Homework 4: Control Points</a> </br>
     <a href="./geog370_project5/map5_modified.html">Homework 5: Tile Map</a> </br>
     <a href="geog370_project5/gcp.txt">Homework 5: Control Points</a> </br>
+    <a href="./geog370_project6/cali_proj6.png">Homework 6: Chloropleth Map</a> </br>
+    <a href="geog370_project6/ACSDT5YSPT2015.B05012_data_with_overlays_2022-02-21T222955.csv">Homework 6: CSV File</a> </br>
+
 </body>
 </html>
