--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="geog370_project5/gcp.txt">Homework 5: Control Points</a> </br>
     <a href="./geog370_project6/cali_proj6.png">Homework 6: Chloropleth Map</a> </br>
     <a href="geog370_project6/ACSDT5YSPT2015.B05012_data_with_overlays_2022-02-21T222955.csv">Homework 6: CSV File</a> </br>
-    <a href="geog370_project6/cali_geojson.geojson">Homework 6: Geojson File</a> </br>
+    <a href="https://github.com/aacharya17/geog370_ss22/blob/main/geog370_project6/cali_geojson.geojson">Homework 6: Geojson File</a> </br>
 
 </body>
 </html>
