--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
     <a href="geog370_project4/gcpoints.txt">Homework 4: Control Points</a> </br>
     <a href="./geog370_project5/map5_modified.html">Homework 5: Tile Map</a> </br>
     <a href="geog370_project5/gcp.txt">Homework 5: Control Points</a> </br>
-    <a href="./geog370_project6/cali_proj6.png">Homework 6: Chloropleth Map</a> </br>
+    <a href="./geog370_project6/HW6.html">Homework 6: Chloropleth Map</a> </br>
     <a>This map focuses on the nativity in California, specifically individuals who are completely native to an Asian country. 
         The data utilized is from 2015. As you can see a large part of California has few native born people. It is important to note that the counties not filled were null data.</a></br>
-    <a href="geog370_project6/ACSDT5YSPT2015.B05012_data_with_overlays_2022-02-21T222955.csv">Homework 6: CSV File</a> </br>
-    <a href="https://github.com/aacharya17/geog370_ss22/blob/main/geog370_project6/cali_geojson.geojson">Homework 6: Geojson File</a> </br>
 
 </body>
 </html>
