--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="./geog370_project6/HW6.html">Homework 6: Chloropleth Map</a> </br>
     <a>This map focuses on the nativity in California, specifically individuals who are completely native to an Asian country. 
         The data utilized is from 2015. As you can see a large part of California has few native born people. It is important to note that the counties not filled were null data.</a></br>
-
+    <a href="./geog370_project7/HW7.html">Homework 7: Proportional Symbol Map</a> </br>
 </body>
 </html>
  
