--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <a>This map focuses on the nativity in California, specifically individuals who are completely native to an Asian country. 
         The data utilized is from 2015. As you can see a large part of California has few native born people. It is important to note that the counties not filled were null data.</a></br>
     <a href="./geog370_project7/HW7.html">Homework 7: Proportional Symbol Map</a> </br>
+    <a href="./geog370_project7/HW8.html">Homework 8: Raster Map</a> </br>
+
 </body>
 </html>
  
