--- a/geog370_project8/HW8.html
+++ b/geog370_project8/HW8.html
@@ -18,9 +18,9 @@
     <a href="./deermap2.png"> 
     <img src="./deermap2.png" alt="North Carolina - Raster Map" width="500px"></a> </br>
     
-    <a href="">Homework 8: Buffer</a> </br>
-    <a href="">Homework 8: Dissolved</a> </br>
-    <a href="">Homework 8: NC</a> </br>
+    <a href="https://github.com/aacharya17/geog370_ss22/blob/main/geog370_project8/%20buffered.geojson">Homework 8: Buffer</a> </br>
+    <a href="https://github.com/aacharya17/geog370_ss22/blob/main/geog370_project8/dissolved_area.geojson">Homework 8: Dissolved</a> </br>
+    <a href="https://github.com/aacharya17/geog370_ss22/blob/main/geog370_project8/NC.geojson">Homework 8: NC</a> </br>
 
 
 
